Mega.py is code for making figure in SP article

--- a/presentations/Makefile
+++ b/presentations/Makefile
@@ -48,7 +48,7 @@ images1.png: orig.mpg
 %.pdf: %.tex
 	pdflatex $<
 
-snowbird09.pdf: snowbird09.tex images1.png viterbi.pdf
+snowbird09.pdf: snowbird09.tex images1.png viterbi.pdf bayes.pdf_t
 	pdflatex $<
 
 # Local Variables:
